--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,6 +115,7 @@ jobs:
             cd frontend
             npm install
             # npm install oauth-sign@^0.9.0
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical # audit level parameter specifies the minimum vulnerability level that will cause the command to fail.
       - save_cache:
           paths: [frontend/node_modules]
@@ -133,6 +134,7 @@ jobs:
             cd backend
             npm install
             # npm install oauth-sign@^0.9.0
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical # audit level parameter specifies the minimum vulnerability level that will cause the command to fail.
       - save_cache:
           paths: [frontend/node_modules]
