--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,6 +149,7 @@ jobs:
       - run:
           name: Ensure back-end infrastructure exists
           command: |
+            yum -y install tar gzip
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
               --tags project=udapeople \
@@ -158,6 +159,7 @@ jobs:
       - run:
           name: Ensure front-end infrastructure exist
           command: |
+            yum -y install tar gzip
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
               --tags project=udapeople \
