--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,9 +147,13 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Ensure back-end infrastructure exists
+          name: Install tar and gzip
           command: |
             yum -y install tar gzip
+
+      - run:
+          name: Ensure back-end infrastructure exists
+          command: |
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
               --tags project=udapeople \
@@ -159,7 +163,6 @@ jobs:
       - run:
           name: Ensure front-end infrastructure exist
           command: |
-            yum -y install tar gzip
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
               --tags project=udapeople \
@@ -173,7 +176,7 @@ jobs:
             cat inventory.txt
             aws ec2 describe-instances \
             --query 'Reservations[*].Instances.PublicIpAddress' \
-            --output text --filter Name=tage:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} >> inventory.txt
+            --output text --filter Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} >> inventory.txt
             # cat inventory.txt
             # export BACKEND_IP=$(aws ec2 describe-instances \
             # --query 'Reservations[*].Instances.PublicIpAddress' \
