--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,7 +220,7 @@ jobs:
           name: Configure server
           command: |
             cd .circleci/ansible
-            cat inventory
+            cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment    
 
