--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,10 +229,17 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install dependencies
+          command: |
+            apk add --update --no-cache tar gzip aws-cli curl
+      - restore_cache: 
+          keys: [backend-build]
+      - run:
           name: Run migrations
           command: |
             cd backend
             npm install
+            npm run build
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
       - run:
