--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -232,7 +232,7 @@ jobs:
           name: Install dependencies
           become: yes
           command: |
-           sudo yum -y install tar gzip nodejs curl
+            yum -y install tar gzip nodejs curl
       - restore_cache: 
           keys: [backend-build]
       - run:
