--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,7 +140,6 @@ jobs:
           command: |
             cd frontend
             npm install
-            # npm install oauth-sign@^0.9.0
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical # audit level parameter specifies the minimum vulnerability level that will cause the command to fail.
       - save_cache:
@@ -251,6 +250,8 @@ jobs:
           command: |
             cd backend
             npm install
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
             npm run build
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
