--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,16 +241,19 @@ jobs:
           name: Install dependencies
           become: yes
           command: |
+            sudo apt-get update
             sudo apt install tar gzip curl
       - install_aws-cli
+      - restore_cache: 
+          keys: [backend-build]
       - run:
           name: Run migrations
           command: |
             cd backend
             npm install
-            npm audit fix --audit-level=critical --force
-            npm audit fix --force
-            npm audit --audit-level=critical
+            # npm audit fix --audit-level=critical --force
+            # npm audit fix --force
+            # npm audit --audit-level=critical
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
       - run:
