--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,25 +265,25 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: cimg/base:stable
-      - restore_cache:
-          keys: [frontend-build]
+      - image: circleci/node:13.8.0
     steps:
       - checkout
+      # - restore_cache:
+      #     keys: [frontend-build]
       - add_ssh_keys:
           fingerprints:
             - d6:42:2d:8a:59:90:35:de:87:7a:6a:00:6b:84:02:64
       - attach_workspace:
           at: ~/
       - install_aws-cli
+      - install_ansible
       - run:
           name: Install dependencies
           become: yes
           command: |
-            curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
-            sudo apt-get nodejs install python3 tar gzip -y
-      
-      - install_ansible
+            # curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
+            sudo apt-get install python3 tar gzip -y
+
       - run:
           name: Get backend url
           command: |
