--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,6 @@ commands:
             sudo apt update
             sudo apt install software-properties-common -y
             sudo add-apt-repository --yes --update ppa:ansible/ansible
-            sudo apt update
             sudo apt install ansible -y
 
   install_aws-cli:
@@ -275,11 +274,15 @@ jobs:
       - attach_workspace:
           at: ~/
       - install_aws-cli
-      - install_ansible
       - run:
           name: Install dependencies
           become: yes
           command: |
+            sudo apt update
+            sudo apt install software-properties-common -y
+            sudo add-apt-repository --yes --update ppa:ansible/ansible
+            sudo apt install ansible -y
+            
             # curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
             sudo apt-get install python3 tar gzip -y
 
