--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,7 +265,7 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/base:2022.03
     steps:
       - checkout
       - add_ssh_keys: # ensures the ssh from environment variable is included
@@ -282,7 +282,7 @@ jobs:
             sudo apt install software-properties-common -y
             sudo add-apt-repository --yes --update ppa:ansible/ansible
             sudo apt install ansible -y
-            
+
             # curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
             sudo apt-get install python3 tar gzip -y
 
