--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ commands:
     description: Install aws cli
     steps:
       - run:
-          name: install aws
+          name: install aws-cli
           command: |
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
@@ -265,7 +265,7 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: cimg/base:2022.03
+      - image: cytopia/ansible
     steps:
       - checkout
       - add_ssh_keys: # ensures the ssh from environment variable is included
@@ -274,15 +274,13 @@ jobs:
       - attach_workspace:
           at: ~/
       - install_aws-cli
+      - install_ansible
       - run:
           name: Install dependencies
           become: yes
           command: |
-            sudo apt update
-            sudo apt install software-properties-common -y
-            sudo add-apt-repository --yes --update ppa:ansible/ansible
-            sudo apt install ansible -y
-
+            apk add --update ansible
+            ansible --version
             # curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
             sudo apt-get install python3 tar gzip -y
 
