--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,7 +265,7 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: cytopia/ansible
+      - image: cimg/base:stable
     steps:
       - checkout
       - add_ssh_keys: # ensures the ssh from environment variable is included
