--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,7 +171,8 @@ jobs:
             # npm install oauth-sign@^0.9.0
             npm audit fix --audit-level=critical --force
             npm audit fix --force
-            npm audit --audit-level=critical # audit level parameter specifies the minimum vulnerability level that will cause the command to fail.
+            npm audit fix --force
+            # npm audit --audit-level=critical # audit level parameter specifies the minimum vulnerability level that will cause the command to fail.
       - save_cache:
           paths: [frontend/node_modules]
           key: backend-scan
