--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -384,8 +384,8 @@ jobs:
             else
               exit 1
             fi
-      - destroy-environment
-      - revert-migrations   
+      # - destroy-environment
+      # - revert-migrations   
 
   cloudfront-update:
     docker:
