--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -11,14 +11,20 @@
 - name: "Installing Node Dependencies"
   shell:
     cd ~/backend-app
-    npm i
+    npm install
 
-- name: "Executing Node app with PM2"
+- name: "executing node app with PM2"
   shell: |
     cd ~/backend-app/dist
-    cd ../
-    npm install
-    npm run build
-    sudo npm install forever -g
-    sudo npm install ts-node -g
-    forever start -c "ts-node -r tsconfig-paths/register -r dotenv/config src/main.ts" ./
+    pm2 stop default
+    pm2 start main.js
+  register: execute_node
+
+- name: "print message"
+  debug:
+    msg: "{{execute_node.stdout_lines}}"
+
+- name: "configure pm2 start as service"
+  become: true
+  shell: |
+    env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
