--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -16,8 +16,8 @@
 - name: "executing node app with PM2"
   shell: |
     cd ~/backend-app/dist
-    pm2 stop default
-    pm2 start main.js
+    # pm2 stop default
+    sudo pm2 start npm -- start
   register: execute_node
 
 - name: "print message"
