--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -401,6 +401,7 @@ jobs:
             export API_URL="http://${BACKEND_PUBLIC_IP}:3030"
             echo ${BACKEND_PUBLIC_IP}
             echo ${API_URL}
+            sleep 2m
             if curl -v --connect-timeout 30 "${API_URL}/api/status" | grep "ok"
             then
               exit 0
