--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,35 +1,44 @@
 ---
 
-- name: "Creates Backend app directory"
-  file:
-    path: ~/backend-app
-    state: directory
+- name: "update apt packages."
+  become: yes
+  apt:
+    update_cache: yes
 
-- name: "Unarchive backend files"
+- name: "upgrade packages"
+  become: yes
+  apt:
+    upgrade: yes
+
+- name: remove unneeded deps
+  become: yes
+  apt:
+    autoremove: yes
+
+- name: install deps
+  become: yes
+  apt:
+    name: ['nodejs', 'npm']
+    state: latest
+    update_cache: yes
+
+- name: install pm2
+  become: yes
+  npm:
+    name: pm2
+    global: yes
+    state: latest
+    production: yes
+
+- name: extract artifact
+  become: yes
   unarchive:
-    src: artifact.tar.gz
-    dest: ~/backend-app
+    src: files/artifact.tar.gz
+    dest: .
 
-- name: "Installing Node Dependencies"
-  shell:
-    cd ~/backend-app
+- name: start app
+  become: yes
+  shell: |
     npm install
-
-- name: "executing node app with PM2"
-  shell: |
-    cd ~/backend-app/dist
-    cd ../
-    npm install 
-    sudo npm install forever -g
-    sudo npm install ts-node -g
-    forever start -c "ts-node -r ts.config-paths/register -r dotenv/config src/main.ts" ./
-  register: execute_node
-
-- name: "print message"
-  debug:
-    msg: "{{execute_node.stdout_lines}}"
-
-- name: "configure pm2 start as service"
-  become: true
-  shell: |
-    env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
+    pm2 stop default
+    pm2 start npm -- start
