--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -445,33 +445,33 @@ jobs:
       - destroy-environment
       - revert-migrations 
 
-#   cleanup:
-#     docker:
-#       - image: cimg/base:stable
-#     steps:
-#       - checkout
-#       - install_aws-cli
-#       - run:
-#           name: Get old stack workflow id
-#           command: |
-#             export STACKS=($(aws cloudformation list-stacks \
-#                 --query "StackSummaries[*].StackName" \
-#                 --stack-status-filter CREATE_COMPLETE --no-paginate --output text
-#             ))
-#             echo Stack names: "${STACKS[@]}"
-#             export OldWorkflowID=$(curl --insecure https://kvdb.io/JZRDVUdggKhnSMtMKQM5ea/old_workflow_id)
-#             echo Old Workflow ID: $OldWorkflowID
-#       - run:
-#           name: Remove old stacks and files
-#           command: |
-#             export OldWorkflowID=$(curl --insecure https://kvdb.io/JZRDVUdggKhnSMtMKQM5ea/old_workflow_id)
-#             echo Old Workflow ID: $OldWorkflowID
-#             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-#             then
-#               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-#               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-#               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-#             fi
+  cleanup:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_aws-cli
+      - run:
+          name: Get old stack workflow id
+          command: |
+            export STACKS=($(aws cloudformation list-stacks \
+                --query "StackSummaries[*].StackName" \
+                --stack-status-filter CREATE_COMPLETE --no-paginate --output text
+            ))
+            echo Stack names: "${STACKS[@]}"
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/JZRDVUdggKhnSMtMKQM5ea/old_workflow_id)
+            echo Old Workflow ID: $OldWorkflowID
+      - run:
+          name: Remove old stacks and files
+          command: |
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/JZRDVUdggKhnSMtMKQM5ea/old_workflow_id)
+            echo Old Workflow ID: $OldWorkflowID
+            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            then
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+            fi
             
 
 workflows:
@@ -502,7 +502,7 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-#       - cloudfront-update:
-#           requires: [smoke-test]
-#       - cleanup:
-#           requires: [cloudfront-update]
+      - cloudfront-update:
+          requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
